hphp/test/zend/good/ext/exif/tests/exif018.php
<?php
var_dump(exif_read_data(dirname(__FILE__).'/image018.tiff'));
?>