hphp/test/zend/bad/ext/phar/tests/nophar.php
<?php
include dirname(__FILE__) . '/files/nophar.phar';
?>
===DONE===